# src/main/java/dev/razafindratelo/misinformation/model/Audio.java
@@ -1,0 +1,27 @@
+package dev.razafindratelo.misinformation.model;
+
+import dev.razafindratelo.misinformation.model.classifier.AudioCodec;
+import dev.razafindratelo.misinformation.model.classifier.ContainerFormat;
+import lombok.AllArgsConstructor;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import lombok.ToString;
+import lombok.experimental.SuperBuilder;
+
+@AllArgsConstructor
+@NoArgsConstructor
+@EqualsAndHashCode(callSuper = true)
+@ToString(callSuper = true)
+@Getter
+@Setter
+@SuperBuilder
+public class Audio extends Media {
+  private double duration;
+  private int bitRate;
+  private int sampleRate;
+  private int channels;
+  private AudioCodec codec;
+  private ContainerFormat format;
+}
