# src/main/java/dev/razafindratelo/misinformation/repository/model/JAudio.java
@@ -1,0 +1,48 @@
+package dev.razafindratelo.misinformation.repository.model;
+
+import dev.razafindratelo.misinformation.model.classifier.AudioCodec;
+import dev.razafindratelo.misinformation.model.classifier.ContainerFormat;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.Table;
+import lombok.AllArgsConstructor;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import lombok.ToString;
+import lombok.experimental.SuperBuilder;
+import org.hibernate.annotations.JdbcTypeCode;
+import org.hibernate.type.SqlTypes;
+
+@Entity
+@Table(name = "audio")
+@AllArgsConstructor
+@NoArgsConstructor
+@Getter
+@Setter
+@SuperBuilder(toBuilder = true)
+@EqualsAndHashCode(callSuper = true)
+@ToString(callSuper = true)
+public class JAudio extends JMedia {
+
+  private double duration;
+
+  @Column(name = "bit_rate")
+  private int bitRate;
+
+  @Column(name = "sample_rate")
+  private int sampleRate;
+
+  private int channels;
+
+  @Enumerated(EnumType.STRING)
+  @JdbcTypeCode(SqlTypes.NAMED_ENUM)
+  private AudioCodec codec;
+
+  @Enumerated(EnumType.STRING)
+  @JdbcTypeCode(SqlTypes.NAMED_ENUM)
+  private ContainerFormat format;
+}
