# src/main/java/dev/razafindratelo/misinformation/service/media/MediaTypeValidator.java
@@ -106,6 +106,170 @@ public class MediaTypeValidator implements ConstraintValidator<ValidMediaType, M
           "image/vnd.wap.wbmp",
           "image/vnd.xiff");
 
+  private static final Set<String> AUDIO_TYPES =
+      Set.of(
+          "audio/mpeg",
+          "audio/mp3",
+          "audio/mp4",
+          "audio/x-m4a",
+          "audio/aac",
+          "audio/aacp",
+          "audio/x-aac",
+          "audio/ogg",
+          "audio/opus",
+          "audio/flac",
+          "audio/x-flac",
+          "audio/wav",
+          "audio/x-wav",
+          "audio/wave",
+          "audio/x-pn-wav",
+          "audio/webm",
+          "audio/x-ms-wma",
+          "audio/x-ms-wax",
+          "audio/x-matroska",
+          "audio/x-ms-asf",
+          "audio/amr",
+          "audio/amr-wb",
+          "audio/amr-wb+",
+          "audio/3gpp",
+          "audio/3gpp2",
+          "audio/x-mpegurl",
+          "audio/x-scpls",
+          "audio/midi",
+          "audio/x-midi",
+          "audio/sp-midi",
+          "audio/rmf",
+          "audio/x-rmf",
+          "audio/x-aiff",
+          "audio/aiff",
+          "audio/x-pn-aiff",
+          "audio/basic",
+          "audio/x-basic",
+          "audio/ulaw",
+          "audio/x-alaw-basic",
+          "audio/x-ms-wmv",
+          "audio/x-realaudio",
+          "audio/vnd.rn-realaudio",
+          "audio/vnd.digital-winds",
+          "audio/vnd.dts",
+          "audio/vnd.dts.hd",
+          "audio/vnd.lucent.voice",
+          "audio/vnd.ms-playready.media.pya",
+          "audio/vnd.nuera.ecelp4800",
+          "audio/vnd.nuera.ecelp7470",
+          "audio/vnd.nuera.ecelp9600",
+          "audio/vnd.rip",
+          "audio/x-ape",
+          "audio/x-monkeys-audio",
+          "audio/x-shorten",
+          "audio/x-voc",
+          "audio/x-vorbis+ogg",
+          "audio/x-speex+ogg",
+          "audio/x-tta",
+          "audio/x-wavpack",
+          "audio/x-wavpack-correction",
+          "audio/x-xi",
+          "audio/x-pn-realaudio",
+          "audio/x-pn-realaudio-plugin",
+          "audio/x-musepack",
+          "audio/x-ms-shorten",
+          "audio/x-stm",
+          "audio/x-s3m",
+          "audio/x-mod",
+          "audio/x-it",
+          "audio/x-xm",
+          "audio/vorbis",
+          "audio/vorbis-config",
+          "audio/ac3",
+          "audio/eac3",
+          "audio/x-eac3",
+          "audio/x-dsd",
+          "audio/dsd",
+          "audio/x-dff",
+          "audio/x-mqa",
+          "audio/x-mqa-flac",
+          "audio/x-opus+ogg",
+          "audio/ape",
+          "audio/x-caf",
+          "audio/x-mace",
+          "audio/x-mpeg",
+          "audio/x-ms-wvx",
+          "audio/x-smd",
+          "audio/x-svx",
+          "audio/x-twinvq",
+          "audio/x-twinvq-plugin",
+          "audio/x-vnd.audioexplosion.mjuicemediafile",
+          "audio/x-voxware",
+          "audio/xm",
+          "audio/it",
+          "audio/s3m",
+          "audio/mod",
+          "audio/x-mo3",
+          "audio/x-mtm",
+          "audio/x-umx",
+          "audio/x-sid",
+          "audio/prs.sid",
+          "audio/x-psf",
+          "audio/x-psflib",
+          "audio/x-psf2",
+          "audio/x-psf2lib",
+          "audio/x-ssf",
+          "audio/x-ssflib",
+          "audio/x-dsdiff",
+          "audio/x-dsf",
+          "audio/x-w64",
+          "audio/x-rf64",
+          "audio/x-mxf",
+          "audio/mxf",
+          "audio/tta",
+          "audio/wavpack",
+          "audio/x-ofr",
+          "audio/x-optimfrog",
+          "audio/x-shn",
+          "audio/shn",
+          "audio/x-ast",
+          "audio/x-dts",
+          "audio/x-dtshd",
+          "audio/x-thd",
+          "audio/x-true-hd",
+          "audio/x-mlp",
+          "audio/x-meridiana-lossless",
+          "audio/x-adpcm",
+          "audio/x-ima",
+          "audio/x-ms-adpcm",
+          "audio/x-g722",
+          "audio/x-g723",
+          "audio/x-g726",
+          "audio/x-g728",
+          "audio/x-g729",
+          "audio/x-g729a",
+          "audio/x-g729b",
+          "audio/x-gsm",
+          "audio/x-gsm-ms",
+          "audio/x-qcelp",
+          "audio/x-evrc",
+          "audio/x-smv",
+          "audio/x-vorbis",
+          "audio/x-celt",
+          "audio/x-speex",
+          "audio/x-silk",
+          "audio/x-ilbc",
+          "audio/x-g719",
+          "audio/x-g7221",
+          "audio/x-siren",
+          "audio/x-aptx",
+          "audio/x-aptx-hd",
+          "audio/x-ldac",
+          "audio/x-sbc",
+          "audio/x-he-aac",
+          "audio/x-he-aac-v2",
+          "audio/x-mp3",
+          "audio/x-mp2",
+          "audio/x-mp1",
+          "audio/x-layer1",
+          "audio/x-layer2",
+          "audio/x-layer3");
+
   private FileType category;
 
   @Override
@@ -124,6 +288,7 @@ public class MediaTypeValidator implements ConstraintValidator<ValidMediaType, M
         switch (category) {
           case VIDEO -> VIDEO_TYPES.contains(contentType.toLowerCase());
           case IMAGE -> IMAGE_TYPES.contains(contentType.toLowerCase());
+          case AUDIO -> AUDIO_TYPES.contains(contentType.toLowerCase());
         };
 
     if (!isValid) {
